--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "realm": "^2.3.0",
     "typeface-roboto-condensed": "0.0.54"
   },
+  "peerDependencies": {
+    "konva": "^1.6.3"
+  },
   "devDependencies": {
     "babel-loader": "^6.2.10",
     "http-server": "^0.9.0",
